# planinf

./: .gitignore  README.md  compose.yaml  gemini.md  pyproject.toml
.gemini/: settings.json
app/: Dockerfile  db.sqlite3  manage.py
app/applied_planning/: admin.py  apps.py  models.py  reporting.py  serializers.py  services.py  urls.py  views.py
app/compliance_engine/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
app/demand_management/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
app/pattern_engine/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
app/planinf/: settings.py  urls.py  wsgi.py
app/resource_management/: admin.py  models.py  serializers.py  (+2 more)
frontend/: package-lock.json  package.json
plan/: 01_plan_resource_management_domain.md  02_plan_pattern_engine_domain.md  03_plan_applied_planning_domain.md  04_plan_compliance_engine_domain.md  05_plan_planning_projection.md  07_plan_gestion_surnumeraires.md  08_plan_api_visualisation.md  09_plan_moteur_conformite_actif.md  10_plan_front_1_api_integration.md  10a_plan_front_api_mock.md  10b_plan_front_ui_components.md  10c_plan_front_ui_refinement.md  10e_plan_front_form_dynamic.md  11_plan_generateur_or_tools.md  12_plan_backend_api_updates.md  13_plan_solver_compliance_integration.md  14_plan_time_balance_engine.md  15_plan_auditing_service.md  16_plan_hr_analytics.md  17_plan_frontend_react_integration.md  18_plan_solver_optimization.md
skills/: ddd-developer.skill  ddd-planner.skill  ddd-reviewer.skill  react-developer.skill
(+75 files in other folders)
