[project]
name = "planinf"
version = "0.1.0"
description = ""
authors = [
    {name = "hyndruide",email = "denis.ulric@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.2,<7.0.0)",
    "environs (>=14.5.0,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
